# linebreak-text

./: LICENSE  README.md  linebreak-text.cabal  linebreak.cabal
Text/: LineBreak.hs
Text/LineBreak/: Generic.hs
tests/: hspec.hs
